<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/comras"
                android:title="@string/comprar_boletos"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/pnedites"
                android:title="@string/boletos_pendietes"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/historial"
                android:title="@string/historial"/>
        <item
                android:id="@+id/Lineasad"
                android:icon="@drawable/lineas"
                android:title="@string/lineas_de_autobus"/>
        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/salir"
                android:title="@string/salir"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/seicion"
                    android:title="Cerrar Secion"/>
        </menu>
    </item>

</menu>
