<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Busqueda"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/origen"
                android:textSize="30sp"
                android:textStyle="bold"
                android:ems="10"
                android:id="@+id/origen"/>
        <Spinner
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/SOEstado"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content" android:id="@+id/SONombre"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/destino"
                android:textSize="30dp"
                android:textStyle="bold"
                android:ems="10"
                android:id="@+id/editText2"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content" android:id="@+id/SDEstado"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content" android:id="@+id/SDNombre"/>
        <TextView
                android:layout_width="match_parent"
                android:text="@string/linea"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" android:id="@+id/textView5"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/SPLinea"/>
        <TextView
                android:layout_width="match_parent"
                android:text="@string/cuantosvoletos"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" android:id="@+id/textView6"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/SPCantidad"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="#000000"
                android:layout_height="wrap_content" android:id="@+id/COstito"/>
        <Button
                android:text="@string/comprar"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/BBuscar"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    </LinearLayout>
</FrameLayout>